Issue #13218 - core-deploy should support both complex webapps with their own jars and arbitrary Handlers (#13220)
core-deploy should support both complex webapps with their own jars and arbitrary Handlers