@@ -44,41 +44,10 @@
       <artifactId>jetty-slf4j-impl</artifactId>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <!-- Using as ZIP to avoid having classes and dependencies live in test classloader -->
-      <groupId>org.eclipse.jetty</groupId>
-      <artifactId>jetty-test-core-example-webapp</artifactId>
-      <version>${project.version}</version>
-      <classifier>core-webapp</classifier>
-      <type>zip</type>
-      <scope>test</scope>
-    </dependency>
   </dependencies>
 
   <build>
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>copy-core-webapps</id>
-            <goals>
-              <goal>copy-dependencies</goal>
-            </goals>
-            <phase>generate-resources</phase>
-            <configuration>
-              <includeClassifiers>core-webapp</includeClassifiers>
-              <includeTypes>zip</includeTypes>
-              <outputDirectory>${project.build.directory}/core-webapps/</outputDirectory>
-              <overWriteReleases>false</overWriteReleases>
-              <overWriteSnapshots>true</overWriteSnapshots>
-              <stripClassifier>true</stripClassifier>
-              <stripVersion>true</stripVersion>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
@@ -90,7 +59,6 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <argLine>@{argLine} ${jetty.surefire.argLine}
-            --add-modules org.eclipse.jetty.jmx
             --add-reads org.eclipse.jetty.deploy=org.eclipse.jetty.http
             --add-reads org.eclipse.jetty.deploy=org.eclipse.jetty.logging</argLine>
         </configuration>
